@@ -820,9 +820,15 @@ def get_agent_info_program(commandline):
         if p:
             os.killpg(os.getpgid(p.pid), signal.SIGTERM)
         raise
-
     except Exception, e:
         raise MKAgentError("Could not execute '%s': %s" % (exepath, e))
+    finally:
+        # The stdout and stderr pipe are not closed correctly on a MKTimeout
+        # Normally these pipes getting closed after p.communicate finishes
+        # Closing them a second time in a OK scenario won't hurt neither..
+        if p:
+            p.stdout.close()
+            p.stderr.close()
 
     if exitstatus:
         if exitstatus == 127:
